# rose_ui_support

gui_connection_monitor/src/: connection_monitor_node.cpp
gui_customer_voice_player/: CMakeLists.txt
gui_customer_voice_player/src/: CustomerVoicePlayer.cpp
gui_item_collector/: CMakeLists.txt
gui_item_collector/src/: item_collector_node.cpp
gui_item_selector/: CMakeLists.txt
gui_item_selector/include/: item_selector.hpp  item_selector_node.hpp  selection_mode.hpp
gui_item_selector/msg/: item_selected.msg  item_selection.msg  items.msg
gui_item_selector/src/: item_selector_node.cpp  selectable_item.cpp  selectable_item_table.cpp
gui_manual_arm_control/: package.xml
gui_manual_arm_control/include/gui_manual_arm_control/: gui_manual_arm_control.hpp  gui_manual_arm_control_node.hpp
gui_manual_arm_control/src/: gui_manual_arm_control.cpp
gui_manual_platform_control/: CMakeLists.txt
gui_manual_platform_control/src/: manual_platform_control.cpp
gui_map_display/: CMakeLists.txt  loop_bumpers.sh  package.xml  publish_bumpers_2.sh  publish_bumpers_3.sh  publish_waypoints.sh
gui_map_display/include/: map_display.hpp
gui_map_display/msg/: selection.msg  waypoint.msg
gui_map_display/src/: map_display_node.cpp
gui_overview_camera/: CMakeLists.txt  package.xml
gui_overview_camera/include/: overview_camera.hpp
gui_overview_camera/msg/: selection.msg  selections.msg
gui_overview_camera/src/: overview_camera.cpp  overview_camera_node.cpp
gui_script_selector/: package.xml
gui_script_selector/src/: script_selector.cpp  script_selector_node.cpp
gui_text_selector/src/: text_selector_node.cpp
gui_voice_capturer/launch/: operator_voice_capture.launch
gui_voice_capturer/src/: VoiceCapturer.cpp  VoiceCapturer.h
rose_script_manager/: CMakeLists.txt  package.xml
rose_script_manager/action/: execute_script.action
rose_script_manager/msg/: current_action.msg
rose_script_manager/src/: publisher.py  script_manager.py  scripts.py
rose_ui_connection_monitor/: CMakeLists.txt  package.xml
rose_ui_connection_monitor/include/: connection_monitor_node.hpp
rose_ui_connection_monitor/src/: connection_monitor_node.cpp
rose_ui_customer_voice_player/: CMakeLists.txt  package.xml
rose_ui_item_collector/: CMakeLists.txt  package.xml
rose_ui_item_collector/action/: get_items.action
rose_ui_item_collector/include/: item_collector.hpp
rose_ui_item_collector/include/rose_ui_item_collector/: item_collector.hpp  item_collector_node.hpp
rose_ui_item_collector/src/: item_collector.cpp  item_collector_node.cpp
rose_ui_item_selector/: CMakeLists.txt  package.xml
rose_ui_item_selector/action/: items.action
rose_ui_item_selector/include/: selectable_item.hpp  selectable_item_table.hpp
rose_ui_item_selector/include/rose_ui_item_selector/: item_selector.hpp  selectable_item_table.hpp
rose_ui_item_selector/src/: item_selector.cpp  item_selector_node.cpp  selectable_item.cpp  selectable_item_table.cpp
rose_ui_manual_arm_control/: CMakeLists.txt  package.xml
rose_ui_manual_arm_control/include/rose_ui_manual_arm_control/: gui_manual_arm_control.hpp  gui_manual_arm_control_node.hpp
rose_ui_manual_arm_control/src/: gui_manual_arm_control.cpp  gui_manual_arm_control_node.cpp
rose_ui_manual_platform_control/: CMakeLists.txt  package.xml
rose_ui_manual_platform_control/include/: manual_platform_control.hpp  manual_platform_control_node.hpp
rose_ui_manual_platform_control/include/rose_ui_manual_platform_control/: manual_platform_control.hpp
rose_ui_manual_platform_control/src/: manual_platform_control.cpp  manual_platform_control_node.cpp
rose_ui_map_display/: CMakeLists.txt  package.xml  publish_bumpers.sh  publish_polygon.sh
rose_ui_map_display/include/rose_ui_map_display/: map_display.hpp  map_display_node.hpp
rose_ui_map_display/msg/: colored_polygon_stamped.msg  waypoint_array.msg
rose_ui_map_display/src/: map_display.cpp  map_display_node.cpp
rose_ui_map_display/tests/: loop_bumpers.sh  publish_bumpers.sh  publish_bumpers_2.sh  publish_bumpers_3.sh  publish_polygon.sh  publish_waypoints.sh
rose_ui_overview_camera/: CMakeLists.txt  package.xml
rose_ui_overview_camera/include/rose_ui_overview_camera/: overview_camera.hpp  overview_camera_node.hpp
rose_ui_overview_camera/src/: overview_camera.cpp  overview_camera_node.cpp
rose_ui_script_selector/: CMakeLists.txt  package.xml
rose_ui_script_selector/include/: script_selector.hpp  script_selector_node.hpp
rose_ui_script_selector/include/rose_ui_script_selector/: script_selector.hpp
rose_ui_script_selector/msg/: script_selected.msg  scripts.msg
rose_ui_script_selector/src/: script_selector.cpp  script_selector_node.cpp
rose_ui_text_selector/: CMakeLists.txt  package.xml
rose_ui_text_selector/include/: text_selector_node.hpp
rose_ui_text_selector/include/rose_ui_text_selector/: text_selector.hpp  text_selector_node.hpp
rose_ui_text_selector/src/: text_selector.cpp  text_selector_node.cpp
rose_ui_voice_capturer/: CMakeLists.txt  package.xml
rose_ui_voice_capturer/src/: VoiceCapturerNode.cpp
