<?xml version="1.0"?>
<package>
  <name>gui_map_display</name>
  <version>0.0.0</version>
  <description>The gui_map_display package</description>

  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>factory</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>luctor_classes</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rose20_platform</build_depend>
  <build_depend>rose_conversions</build_depend>
  <build_depend>rose_datamanager_api</build_depend>
  <build_depend>rose_parameter_manager</build_depend>
  <build_depend>rose_transformations</build_depend>
  <build_depend>server_multiple_client</build_depend>
  <build_depend>std_msgs</build_depend>
 
  <run_depend>factory</run_depend>  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>luctor_classes</run_depend>
  <run_depend>message_generation</run_depend>  
  <run_depend>rose20_platform</run_depend>
  <run_depend>rose_conversions</run_depend>
  <run_depend>rose_datamanager_api</run_depend>  
  <run_depend>rose_parameter_manager</run_depend>
  <run_depend>rose_transformations</run_depend>
  <run_depend>server_multiple_client</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
