<?xml version="1.0"?>
<package>
  <name>rose_script_manager</name>
  <version>0.0.0</version>
  <description>The rose_script_manager package</description>
  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscomm</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rose_ui_item_collector</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rose_ui_item_collector</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
   
  </export>
</package>