<?xml version="1.0"?>
<package>
  <name>gui_connection_monitor</name>
  <version>0.0.0</version>
  <description>The gui_connection_monitor package</description>

  <maintainer email="langen@robot-rose.nl">mathijs</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
 
  <run_depend>roscpp</run_depend>  
  <run_depend>std_msgs</run_depend>  

  <export>
  </export>
</package>