<?xml version="1.0"?>
<package>
  <name>rose_ui_customer_voice_player</name>
  <version>0.0.2</version>
  <description>The rose_ui_customer_voice_player package</description>

  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>TODO</license>

   <author email="langen@robot-rose.nl">Mathijs de Langen</author>
   <author email="beek@robot-rose.nl">Loy van Beek</author>

  <build_depend>roscomm</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscomm</run_depend>s

  <buildtool_depend>catkin</buildtool_depend>
  <export>

  </export>
</package>
