<?xml version="1.0"?>
<package>
  <name>gui_item_collector</name>
  <version>0.0.0</version>
  <description>The gui_item_collector package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>gui_item_selector</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscomm</build_depend>
  <build_depend>server_multiple_client</build_depend>
  <build_depend>rose_common</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>gui_item_selector</run_depend>
  <run_depend>roscomm</run_depend>
  <run_depend>server_multiple_client</run_depend>
  <run_depend>rose_common</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>