<?xml version="1.0"?>
<package>
  <name>rose_ui_item_collector</name>
  <version>0.0.0</version>
  <description>The rose_ui_item_collector package</description>

  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>gui_item_selector</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscomm</build_depend>
  <build_depend>server_multiple_client</build_depend>
  <build_depend>rose_common</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>gui_item_selector</run_depend>
  <run_depend>roscomm</run_depend>
  <run_depend>server_multiple_client</run_depend>
  <run_depend>rose_common</run_depend>
  
  <export>
  </export>
</package>