<?xml version="1.0"?>
<package>
  <name>gui_manual_platform_control</name>
  <version>0.0.0</version>
  <description>The gui_manual_platform_control package</description>

  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>shared_variables</build_depend>
 
  <run_depend>geometry_msgs</run_depend>  
  <run_depend>roscpp</run_depend>  
  <run_depend>std_msgs</run_depend>  
  <run_depend>shared_variables</run_depend>  
  
  <export>

  </export>
</package>