<?xml version="1.0"?>
<package>
  <name>rose_ui_overview_camera</name>
  <version>0.0.0</version>
  <description>The rose_ui_overview_camera package</description>
  
  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arm_controller</build_depend>
  <build_depend>factory</build_depend>
  <build_depend>luctor_classes</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>operator_messaging</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_datamanager_api</build_depend>
  <build_depend>rose_parameter_manager</build_depend>
 
  <run_depend>arm_controller</run_depend>  
  <run_depend>arm_controller</run_depend>  
  <run_depend>factory</run_depend>  
  <run_depend>luctor_classes</run_depend>
  <run_depend>message_generation</run_depend>  
  <run_depend>operator_messaging</run_depend>  
  <run_depend>rose_common</run_depend>  
  <run_depend>rose_datamanager_api</run_depend>  
  <run_depend>rose_parameter_manager</run_depend>  

  <export>

  </export>
</package>