<?xml version="1.0"?>
<package>
  <name>rose_ui_script_selector</name>
  <version>0.0.0</version>
  <description>The rose_ui_script_selector package</description>

  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>  
  <build_depend>luctor_classes</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rose_datamanager_api</build_depend>
  <build_depend>rose_script_manager</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>luctor_classes</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rose_datamanager_api</run_depend>  
  <run_depend>rose_script_manager</run_depend>

  <export>

  </export>
</package>