<?xml version="1.0"?>
<package>
  <name>rose_ui_text_selector</name>
  <version>0.0.0</version>
  <description>The rose_ui_text_selector package</description>

  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>factory</build_depend>
  <build_depend>luctor_classes</build_depend>
  <build_depend>rose_datamanager_api</build_depend>
  <build_depend>rose_parameter_manager</build_depend>
 
  <run_depend>factory</run_depend>
  <run_depend>luctor_classes</run_depend>
  <run_depend>rose_datamanager_api</run_depend>  
  <run_depend>rose_parameter_manager</run_depend>  

  <export>

  </export>
</package>